[package]
name = "eth-prover"
version = "2.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types = { path = "../eth-types", default-features = false }
near-sdk.workspace = true
borsh.workspace = true
rlp.workspace = true
near-plugins.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4.3", features = ["serde"] }
indicatif = "0.14"
lazy_static = "*"
near-crypto = "0.29.2"
near-primitives = "0.29.2"
workspaces = "0.6.0"
tokio = { version = "1.18.1", features = ["full"] }

[features]
default = []
expensive_tests = []
