[package]
name = "eth2-client"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ethereum-types = { version = "0.14.1", features = ["rlp", "serialize"],  default-features = false }
eth-types =  { path = "../eth-types" }
eth2-utility =  { path = "../eth2-utility" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm" }
merkle_proof = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm" }
bls = { git = "https://github.com/aurora-is-near/lighthouse.git", optional = true, tag = "v3.5.1-wasm", default-features = false, features = ["milagro"]}
admin-controlled =  { path = "../admin-controlled" }
near-sdk = "4.1.1"
borsh = "0.9.3"
bitvec = "1.0.0"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
hex = "0.4.0"
workspaces = "0.7"
near-units = "0.2.0"
tokio = { version = "1.19.0", features = ["full"] }
anyhow = "1.0"

[features]
default = ["logs", "mainnet"]
bls = ["dep:bls"]
logs = []
mainnet = []
