[package]
name = "eth2-client"
version = "0.4.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types =  { path = "../eth-types" }
eth2-utility =  { path = "../eth2-utility" }
bls = { git = "https://github.com/aurora-is-near/lighthouse.git", optional = true, tag = "v4.6.0-wasm", default-features = false, features = ["milagro"]}
ethereum-types.workspace = true
tree_hash.workspace = true
near-sdk.workspace = true
borsh.workspace = true
bitvec.workspace = true
near-plugins.workspace = true

[dev-dependencies]
ethereum_serde_utils.workspace = true
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.0"
workspaces = "0.7"
near-units = "0.2.0"
tokio = { version = "1.19.0", features = ["full"] }
anyhow = "1.0"

[features]
default = ["logs", "mainnet"]
bls = ["dep:bls"]
logs = []
mainnet = []
