[package]
name = "eth2-client"
version = "0.5.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"
repository.workspace = true

# fields to configure build with WASM reproducibility, according to specs
# in https://github.com/near/NEPs/blob/master/neps/nep-0330.md
[package.metadata.near.reproducible_build]
# docker image, descriptor of build environment
image = "sourcescan/cargo-near:0.13.2-rust-1.84.0"
# tag after colon above serves only descriptive purpose; image is identified by digest
image_digest = "sha256:b41cb89907f92b114da9e2be4e109bff30ab792c22ddcbd2a4cff8e340cb9acb"
# list of environment variables names, whose values, if set, will be used as external build parameters
# in a reproducible manner
# supported by `sourcescan/cargo-near:0.10.1-rust-1.82.0` image or later images
passed_env = []
# build command inside of docker container
# if docker image from default gallery is used https://hub.docker.com/r/sourcescan/cargo-near/tags,
# the command may be any combination of flags of `cargo-near`,
# supported by respective version of binary inside the container besides `--no-locked` flag
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types =  { path = "../eth-types" }
eth2-utility =  { path = "../eth2-utility" }
bls = { git = "https://github.com/aurora-is-near/lighthouse.git", optional = true, tag = "v4.6.0-wasm", default-features = false, features = ["milagro"]}
ethereum-types.workspace = true
tree_hash.workspace = true
near-sdk.workspace = true
borsh.workspace = true
bitvec.workspace = true
near-plugins.workspace = true
near-abi = "0.4.3"
schemars = "0.8.22"
amcl = { git = "https://github.com/sigp/incubator-milagro-crypto-rust.git", default-features = false, features = ["bls381"]}

[dev-dependencies]
ethereum_serde_utils.workspace = true
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.0"
near-workspaces = "0.18"
near-units = "0.2.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
cargo-near-build = "0.4.3"
rstest = "0.24.0"


[features]
default = ["logs", "mainnet"]
bls = ["dep:bls"]
logs = []
mainnet = []
