[package]
name = "eth2-utility"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ethereum-types = { version = "0.14.1", features = ["rlp", "serialize"],  default-features = false }
eth-types =  { path = "../eth-types" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", rev = "ec55f0b8eb997c80364f01afef74114ce139bcae" }
merkle_proof = { git = "https://github.com/aurora-is-near/lighthouse.git", rev = "ec55f0b8eb997c80364f01afef74114ce139bcae" }
near-sdk = "4.0.0"
borsh = "0.9.3"
bitvec = "1.0.0"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
hex = "0.4.0"

[features]
default = []
