[package]
name = "eth2-utility"
version = "0.1.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ethereum-types = { version = "0.14.1", features = ["rlp", "serialize"],  default-features = false }
eth-types =  { path = "../eth-types" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm" }
merkle_proof = { git = "https://github.com/aurora-is-near/lighthouse.git", tag = "v3.5.1-wasm" }
near-sdk = "4.1.1"
borsh = "0.9.3"
bitvec = "1.0.0"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
hex = "0.4.0"

[features]
default = []
