[package]
name = "eth2-utility"
version = "0.3.0"
authors = ["Aurora <hello@aurora.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eth-types =  { path = "../eth-types" }
ethereum-types.workspace = true
tree_hash.workspace = true
ethereum_hashing.workspace = true
near-sdk.workspace = true
borsh = "1.5.6"
bitvec.workspace = true

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
hex = "0.4.0"

[features]
default = []
