[package]
name = "rainbow-omni-prover-proxy"
version = "2.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
borsh.workspace = true
rlp.workspace = true
near-plugins.workspace = true

omni-types = { path = "../omni-types" }
bridge-common = { git = "https://github.com/Near-One/rainbow-token-connector.git" }
ethabi = "12.0.0"
hex = "0.4.2"
