[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "eth2spec",
    "tqdm>=4.67.1",
    "web3>=7.11.1",
]

[tool.uv.sources]
eth2spec = { git = "https://github.com/ethereum/consensus-specs" }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.9",
    "types-tqdm>=4.67.0.20250417",
]
